Orchestration/ingress/ingress_ingress_prof.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ingress.example.local
      http:
        paths:
          - path: /source(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service-load-balancer
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-load-balancer
                port:
                  number: 80
